cluster-config/nexus/2-nexus-template.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: "openshift-gitops"
  name: apps-infra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nexus
    app.kubernetes.io/instance: nexus
    app.kubernetes.io/name: nexus
    app.kubernetes.io/part-of: nexus
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: nexus
  namespace: apps-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: quay.io/jstakun/nexus3:3.54.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - echo
            - ok
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 4Gi
            cpu: 2
          requests:
            memory: 512Mi
            cpu: 200m
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-data
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-pv
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: nexus
  namespace: apps-infra 
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nexus
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nexus
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: nexus
  namespace: apps-infra
spec:
  port:
    targetPort: 8081-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: nexus
    weight: 100
